--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
     display: flex;
     justify-content: space-between ;
     margin: 10px;
@@ -43,4 +43,8 @@
 
 .menu {
     display: flex;
-}
+} */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
